@@ -1551,15 +1551,6 @@ See also <tt>normalFontSet</tt>.
     -*-*-*-r-*--16-*-*-*-*-*-*-*</font></tt>
 
 <p>
-<dt><kbd>eucEncoding</kbd>
-<dd>If this is <i>ON</i>,
-it is assumed that EUC encoding is used for international text.
-Normally, EUC should be used.
-This is effective only if internationalization facility is enabled.
-<br>
-<b>Default:</b> <FONT color="#AA00AA">on</font>
-
-<p>
 <dt><kbd>fixedFontSet</kbd> (<kbd>FontSet</kbd>)
 <dd>Set the fontset used for displaying text in conversion or status
 when entering text with <i>Off the Spot</i> or <i>Over the Spot</i>.
