@@ -370,10 +370,6 @@ static XtResource application_resources[] = {
        XtOffset(appresPtr, international), XtRBoolean, (caddr_t) & false},
     {"fontMenulanguage", "Language", XtRString, sizeof(char *),
        XtOffset(appresPtr, font_menu_language), XtRString, (caddr_t) ""},
-    {"eucEncoding", "EucEncoding", XtRBoolean, sizeof(Boolean),
-       XtOffset(appresPtr, euc_encoding), XtRBoolean, (caddr_t) & true},
-    {"localeEncoding", "LocaleEncoding", XtRBoolean, sizeof(Boolean),
-       XtOffset(appresPtr, locale_encoding), XtRBoolean, (caddr_t) & true},
     {"alwaysUseFontSet", "AlwaysUseFontSet", XtRBoolean, sizeof(Boolean),
        XtOffset(appresPtr, always_use_fontset), XtRBoolean, (caddr_t) & false},
     {"fixedFontSet", "FontSet", XtRFontSet, sizeof(XFontSet),
