@@ -17,6 +17,9 @@ CHANGES:
 	  Previously, bytes with a value larger than expressable with 7 bits
 	  were printed as backslash-escaped three-digit octal value.
 
+	o Remove application resources save8bit, latinKeyboard,
+	  fig2devLocalizeOption, encoding, eucEncoding, localeEncoding.
+
 BUGS FIXED:
 	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
 	o Compounds keep their their size after editing or updating, ticket #51.
